--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,6 @@ lib_deps =
 	mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display@^3.0.14
 	bblanchon/ArduinoJson@^7.4.2
 	adafruit/Adafruit GFX Library@^1.12.4
+
+[platformio]
+description = ÖPNV Abfahrtsanzeiger für die BVG aus 2 HUB75 LED Matrix Displays & ESP32
