--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+monitor_speed = 115200
 framework = arduino
 lib_deps = 
 	mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display@^3.0.14
@@ -19,3 +20,4 @@ lib_deps =
 
 [platformio]
 description = ÖPNV Abfahrtsanzeiger für die BVG aus 2 HUB75 LED Matrix Displays & ESP32
+
